--- a/jaehkim-research/.env.example
+++ b/jaehkim-research/.env.example
@@ -16,3 +16,6 @@ RESEND_API_KEY="re_your_api_key_here"
 
 # Site URL (for SEO, sitemap, Open Graph)
 NEXT_PUBLIC_SITE_URL="https://your-domain.vercel.app"
+
+# Vercel Blob (optional, for image upload in production)
+# BLOB_READ_WRITE_TOKEN="vercel_blob_rw_..."
