--- a/jaehkim-research/package.json
+++ b/jaehkim-research/package.json
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdxeditor/editor": "^3.52.4",
     "@prisma/client": "^5.22.0",
-    "@tiptap/extension-code-block-lowlight": "^3.19.0",
-    "@tiptap/extension-image": "^3.19.0",
-    "@tiptap/extension-link": "^3.19.0",
-    "@tiptap/extension-placeholder": "^3.19.0",
-    "@tiptap/pm": "^3.19.0",
-    "@tiptap/react": "^3.19.0",
-    "@tiptap/starter-kit": "^3.19.0",
+    "@vercel/blob": "^2.3.0",
     "bcryptjs": "^3.0.3",
-    "lowlight": "^3.3.0",
+    "nanoid": "^5.1.6",
     "next": "^14.2.0",
     "next-auth": "^4.24.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "resend": "^6.9.2"
   },
   "prisma": {
